# traceforge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/bronze/trus/: SRS-TRUS-001.md  design-elements.csv  test-cases.csv
deploy/: azure.sh
docs/: architecture.md  deploy.md  mcp.md
eval/: gold.yaml  runner.py
src/traceforge/: __init__.py  api.py  cli.py  embed.py  ingest.py  lake.py  mcp_client_demo.py  mcp_server.py  models.py  pipeline.py  quality.py  rag.py  retrieve.py  trace.py
src/traceforge/static/: index.html
tests/: test_access_control.py  test_api.py  test_eval.py  test_mcp.py  test_quality.py  test_trace.py
