[project]
name = "traceforge"
version = "0.1.0"
description = "Requirements Traceability & Compliance Copilot for safety-critical systems"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Tony Kus" }]

dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "duckdb>=0.10",              # SQL engine for the medallion lake (portable stand-in for Databricks/Delta)
    "rank-bm25>=0.2.2",         # lexical retrieval
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "typer>=0.12",              # CLI
    "rich>=13.7",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
azure = [
    "openai>=1.30",             # Azure OpenAI (chat + embeddings) via AzureOpenAI client
    "azure-search-documents>=11.4",
    "azure-storage-blob>=12.19",
    "azure-identity>=1.16",
]
mcp = ["mcp>=1.2"]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.9", "httpx>=0.27"]

[project.scripts]
traceforge = "traceforge.cli:app"
traceforge-mcp = "traceforge.mcp_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
traceforge = ["static/*.html"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
